# Order_Reporting

./: .env  .gitignore  .replit  Dockerfile  README.md  USER_AUTH_SETUP_GUIDE.md  USER_MANAGEMENT_QUICK_REFERENCE.md  docker-compose.yaml  pyproject.toml  replit.md  requirements.txt
.local/state/replit/agent/filesystem/: filesystem_state.json
airflow/: airflow.db
airflow_home/: airflow.cfg
dags/: dynamic_report_generator_dag.py  report_test_template.ipynb  test_order_search_dag_simplified.ipynb  test_order_search_report_dag.ipynb
dashboard/: AuthPythonTest.ipynb  app.py  auth.py  reports.py  users.py
dashboard/templates/: base.html  index.html
dashboard/templates/auth/: login.html
dashboard/templates/reports/: create.html  edit.html  list.html  view.html
dashboard/templates/users/: create.html  list.html  reset_password.html  view.html
db/: database
init-scripts/: 01_create_schema.sql  02_create_user_tables.sql
scripts/: drop_oracle_report_tables.sql  migrate_reports_to_mongodb.py
utils/: Untitled-3.ipynb  create_admin_user.py  mongo_report_config.py  oracle_db_utils.py  report_utils.py  user_management.py
